# datasus-etl

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  PHASE2_SUMMARY.md  README.md  TODO.md  check_transform.py  hatch_build.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  pages-deploy.yml  release.yml
.streamlit/: config.toml
docs/: 404.html  PHASE3_SUMMARY.md  index.html  package-rename-analysis.md  performance-analysis.md  ram-analysis-report.md  temp-file-optimization.md  web-ui-improvements.md
docs/_astro/: changelog.ChGNTydP.css  changelog.Dki2Q3Kt.css  changelog.OmbSmIS7.css  changelog.eV-4YdHv.css
docs/changelog/: index.html
docs/docs/: index.html
docs/docs/architecture/: index.html
docs/docs/cli/: index.html
docs/docs/python-api/: index.html
docs/docs/schemas/: index.html
docs/download/: index.html
docs/pt/: index.html
docs/pt/download/: index.html
docs/pt/tutorial/: index.html
docs/tutorial/: index.html
examples/: basic_usage.py  batch_processing.py  csv_export.py  optimized_pipeline_usage.py  partial_pipeline.py  query_examples.py  raw_export.py  schema_usage.py  sim_usage.py
installer/linux/: AppRun  datasus-etl.desktop
installer/windows/: datasus-etl.iss
scripts/: build_nuitka.py  generate_changelog.py  generate_icons.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/public/: CNAME
site/scripts/: post-build.mjs
site/src/components/: DownloadButton.astro  DownloadTable.astro  FeatureCard.astro  Footer.astro  LanguageToggle.astro  StatsBar.astro  ThemeToggle.astro  TopBar.astro
site/src/layouts/: Page.astro
site/src/lib/: i18n.ts  releases.ts
site/src/pages/: 404.astro  changelog.astro  contact.astro  download.astro  how-it-works.astro  index.astro  tutorial.astro
site/src/pages/docs/: architecture.astro  cli.astro  index.astro  python-api.astro  schemas.astro
site/src/pages/pt/: contact.astro  download.astro  how-it-works.astro  index.astro  tutorial.astro
site/src/styles/: global.css
src/datasus_etl/: __init__.py  __main__.py  __version__.py  cli.py  config.py  exceptions.py  types.py
src/datasus_etl/_data/: __init__.py
src/datasus_etl/_data/sihsus/: IT_SIHSUS_1603.md
src/datasus_etl/_data/sim/: Estrutura_do_SIM_2025.md
src/datasus_etl/constants/: __init__.py  general.py  sihsus_schema.py
src/datasus_etl/core/: __init__.py  context.py  pipeline.py  stage.py
src/datasus_etl/datasets/: __init__.py  base.py
src/datasus_etl/datasets/sihsus/: __init__.py  config.py  schema.py
src/datasus_etl/datasets/sim/: __init__.py  config.py  schema.py
src/datasus_etl/download/: ftp_downloader.py
src/datasus_etl/pipeline/: __init__.py  base_pipeline.py  estimate.py  sihsus_pipeline.py  sim_pipeline.py
src/datasus_etl/storage/: __init__.py  data_exporter.py  dimension_loader.py  duckdb_manager.py  duckdb_query_engine.py  incremental_updater.py  memory_aware_processor.py  migration.py  parquet_manager.py  parquet_query_engine.py  parquet_writer.py  paths.py  sql_transformer.py
src/datasus_etl/transform/: __init__.py
src/datasus_etl/transform/converters/: __init__.py  dbc_to_dbf.py  dbf_to_duckdb.py  dbf_to_parquet.py
src/datasus_etl/transform/sql/: __init__.py  base.py  boolean_mappings.py  categorical.py  cid_array.py  cleaning.py  dates.py  enrichment.py  idade.py  (+5 more)
src/datasus_etl/utils/: ibge_loader.py
src/datasus_etl/web/: __init__.py  app.py  dictionary.py  history_store.py  runtime.py  server.py  templates.py  user_config.py
src/pydatasus/: __init__.py  __main__.py  __version__.py  cli.py  config.py  constants.py  exceptions.py
src/pydatasus/constants/: __init__.py  general.py  sihsus_schema.py
src/pydatasus/core/: __init__.py  context.py  pipeline.py  stage.py
src/pydatasus/datasets/: __init__.py  base.py
src/pydatasus/download/: ftp_downloader.py
src/pydatasus/pipeline/: __init__.py  base_pipeline.py  sihsus_pipeline.py  sim_pipeline.py
src/pydatasus/storage/: __init__.py  data_exporter.py  duckdb_manager.py  incremental_updater.py  parquet_query_engine.py  parquet_writer.py  sql_transformer.py
src/pydatasus/transform/: __init__.py
src/pydatasus/utils/: ibge_loader.py
src/pydatasus/web/: __init__.py  app.py  dictionary.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline_small.py
tests/unit/: __init__.py  test_cli_pick_folder.py  test_column_stats.py  test_config.py  test_core.py  test_datasets.py  test_duckdb_manager.py  test_export_unlimited.py  test_history_store.py  test_migration.py  test_missing_months.py  test_parquet_writer.py  test_paths.py  test_query_enrichment.py  test_query_schema_endpoint.py  test_reset_storage.py  test_sihsus_processor.py  test_sql_transformer.py  test_validate_sql.py  test_version_check.py  test_view_flags.py  test_view_spec.py
web-ui/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
web-ui/src/: globals.css  main.tsx  router.tsx
web-ui/src/components/: BrazilMap.tsx  ColumnDistinctBadge.tsx  ColumnFillBadge.tsx  ColumnFillBar.tsx  ColumnTypeBadge.tsx  DiskUsageBar.tsx  EmptyState.tsx  LanguageToggle.tsx  Layout.tsx  MonthPicker.tsx  QueryBuilderFilters.tsx  QueryBuilderPanel.tsx  QueryTabsBar.tsx  ResetStorageDialog.tsx  SchemaTree.tsx  Sidebar.tsx  StatCard.tsx  SubsystemCard.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TopBar.tsx  UpdateBanner.tsx  VolumeChart.tsx
web-ui/src/hooks/: useLocalStorage.ts  usePipelineRun.ts  useQueryHistory.ts  useSettings.ts  useSqlQuery.ts  useStats.ts  useVersionCheck.ts
web-ui/src/i18n/: index.ts
web-ui/src/lib/: api.ts  columnDistinctCount.ts  columnFillPct.ts  columnType.ts  format.ts  queryCompiler.ts  sqlAutocomplete.ts  sqlPretty.ts  sse.ts
web-ui/src/pages/: Dashboard.tsx  DownloadWizard.tsx  Query.tsx  Settings.tsx
web-ui/src/types/: api.ts
web-ui/tests/: dashboard.spec.ts  download.spec.ts  query.spec.ts  settings.spec.ts
(+46 files in other folders)
