[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydatasus"
version = "0.1.0"
description = "Pipeline profissional para dados do DATASUS (Sistema de Informações Hospitalares - SIHSUS)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Seu Nome", email = "seu@email.com"},
]
keywords = [
    "datasus",
    "sus",
    "saude",
    "brasil",
    "sihsus",
    "sim",
    "siasus",
    "sinasc",
    "cnes",
    "etl",
    "pipeline",
    "parquet",
    "duckdb",
    "epidemiologia",
    "saude-publica",
    "health-data",
    "dados-publicos",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Database",
    "Natural Language :: Portuguese (Brazilian)",
    "Typing :: Typed",
]
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "pydantic>=2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "dbfread>=2.0.7",
    "datasus-dbc>=0.1.3",
    "simpledbf>=0.2.6",    # Fast DBF reading for small files
    "psutil>=5.9.0",       # System resource monitoring
    "streamlit>=1.30.0",   # Web interface
    "streamlit-ace>=0.1.1", # Code editor with SQL syntax highlighting
    "openpyxl>=3.1.0",     # Excel export (.xlsx)
    "xlrd>=2.0.0",         # Excel import (.xls) for IBGE data
    "plotly>=5.18.0",      # Interactive charts for web UI
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-tqdm",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
datasus = "pydatasus.cli:app"
pydatasus = "pydatasus.cli:app"  # Alias for backward compatibility

[project.urls]
Homepage = "https://github.com/user/pydatasus"
Documentation = "https://pydatasus.readthedocs.io"
Repository = "https://github.com/user/pydatasus"
Issues = "https://github.com/user/pydatasus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pydatasus"]

[tool.hatch.build.targets.wheel.sources]
"src/pydatasus/_data" = "pydatasus/_data"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["pydatasus"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "dbfread.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "simpledbf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "datasus_dbc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit_ace.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=pydatasus",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "**/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
