[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datasus-etl"
version = "0.1.0"
description = "Pipeline profissional para dados do DATASUS: extração, transformação e carga em formatos otimizados."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Seu Nome", email = "seu@email.com"},
]
keywords = [
    "datasus",
    "sus",
    "saude",
    "brasil",
    "sihsus",
    "sim",
    "siasus",
    "sinasc",
    "cnes",
    "etl",
    "pipeline",
    "parquet",
    "duckdb",
    "epidemiologia",
    "saude-publica",
    "health-data",
    "dados-publicos",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Database",
    "Natural Language :: Portuguese (Brazilian)",
    "Typing :: Typed",
]
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "pydantic>=2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "dbfread>=2.0.7",
    "datasus-dbc>=0.1.3",
    "simpledbf>=0.2.6",    # Fast DBF reading for small files (requires pandas)
    "pandas>=2.0",         # Required by simpledbf.to_dataframe() and SQL export
    "psutil>=5.9.0",       # System resource monitoring
    "fastapi>=0.110",      # Web API framework
    "uvicorn[standard]>=0.27", # ASGI server for FastAPI
    "sse-starlette>=2.0",  # Server-Sent Events for live pipeline progress
    "tomli-w>=1.0",        # Writing TOML config files
    "openpyxl>=3.1.0",     # Excel export (.xlsx)
    "xlrd>=2.0.0",         # Excel import (.xls) for IBGE data
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-tqdm",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
datasus = "datasus_etl.cli:app" # Alias
datasus-etl = "datasus_etl.cli:app"  

[project.urls]
Homepage = "https://github.com/user/datasus-etl"
Documentation = "https://datasus-etl.readthedocs.io"
Repository = "https://github.com/user/datasus-etl"
Issues = "https://github.com/user/datasus-etl/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/datasus_etl"]
artifacts = ["src/datasus_etl/web/static/**/*"]

[tool.hatch.build.targets.wheel.sources]
"src/datasus_etl/_data" = "datasus_etl/_data"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["datasus_etl"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "dbfread.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "simpledbf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "datasus_dbc.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=datasus_etl",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "**/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
